# perlbind

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
doc/: readme.md
include/perlbind/: array.h  forward.h  function.h  hash.h  interpreter.h  iterator.h  package.h  perlbind.h  scalar.h  stack.h  stack_push.h  stack_read.h  subcaller.h  traits.h  typemap.h  types.h
src/: function.cpp  interpreter.cpp  package.cpp
test/: CMakeLists.txt  bindings.cpp  interpreter.cpp  stack.cpp  traits.cpp  types.cpp
